worker-cluster/resources/default/app-stack/demo-api/instance-configure/5058f/07-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-api-api
  namespace: default
  labels:
    app: demo-api-api
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: demo-api-api
