worker-cluster/resources/default/app-stack/demo-api/instance-configure/5058f/08-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-api-ingress
  namespace: default
  labels:
    app: demo-api
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  rules:
    - host: demo-api.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo-api-api
                port:
                  number: 80
  tls:
    - hosts:
        - demo-api.example.com
      secretName: demo-api-tls
